<resources>
    <string name="app_name">uBudgIt</string>
    <string name="title_activity_monthly_budget">MonthlyBudget</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Monthly Budget Page Strings -->
    <string name="monthly_budget_budget_button">Change Budget</string>
    <string name="monthly_budget_expense_button">Change Expense</string>
    <string name="monthly_budget_title_text">Monthly Budget</string>
    <string name="title_activity_goal">GoalActivity</string>

    <!-- Budget Page Strings -->
    <string name="add_budget_fragment_button">Confirm</string>
    <string name="cancel_budget_fragment_button">Cancel</string>
    <string name="value_budget_fragment_hint">Enter Value:</string>
    <string name="category_text">Choose Expense Category</string>
    <string name="current_budget_text">Current Budget Value:</string>
    <string name="current_expense_text">Current Expense Value:</string>
    <string name="switch_text">Add</string>
    <string name="toast_confirm">Change Confirmed.</string>
    <string name="toast_cancel">Change Cancelled.</string>
    <string name="toast_empty">No Value Entered.</string>
    <string name="toast_subtract">Subtraction Exceeds.</string>

    <!-- Goals Page Strings -->
    <string name="goals_button_string">Goals</string>
    <string name="setGoal">Set Goal</string>
    <string name="goalTextBox">Enter Goal</string>
    <string name="delete_Goal">Delete</string>
    <string name="edit_Goal">Edit</string>

    <!--   Motivation Page Strings -->
    <string name="motivation_button_string">Motivation</string>
    <string name="motivate_button">Get Motivated</string>


    <!-- Main Page Strings   -->
    <string name="Title">uBudgIt</string>
    <string name="information">Info</string>
    <string name="infoTitle">Information</string>
    <string name="instruction">Instructions</string>
    <!-- String Array -->
    <string-array name="categories">
        <item>Food</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Housing</item>
        <item>Medical</item>
        <item>Utilities</item>
        <item>Etc</item>
    </string-array>

</resources>