<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="125dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="335dp"
        android:fontFamily="sans-serif-black"
        android:inputType="number"
        android:text="@string/value_budget_fragment_hint"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/green"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="41dp"
        android:text="@string/add_budget_fragment_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/red"
        android:layout_marginStart="269dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="41dp"
        android:text="@string/cancel_budget_fragment_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="251dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/current_budget_text"
        android:textSize="16dp" />

    <Switch
        android:id="@+id/budget_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="93dp"
        android:text="@string/switch_text" />
</RelativeLayout>