<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="125dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="174dp"
        android:fontFamily="sans-serif-black"
        android:inputType="number"
        android:text="@string/value_budget_fragment_hint"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/green"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="41dp"
        android:text="@string/add_budget_fragment_button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/red"
        android:layout_marginStart="269dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="41dp"
        android:text="@string/cancel_budget_fragment_button" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="128dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="27dp"
        android:text="@string/category_text" />

</RelativeLayout>